# Chess_Engine

./: BitBoard.md  README.md  Zobrish_hasing.md  current_progress.md  fen.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
myenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
src/: __init__.py  board.py  engine.py  fen.md
