[project]
name = "chess-engine"
version = "0.1.0"
description = "Chess Engine using python"
authors = [
    {name = "Rithvikns",email = "rithviknswamy@gmail.com"}
]
packages = [{ include = "chess_engine" }] 
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

